[package]
name = "wthor"
version = "0.2.0"
authors = ["Harenayo"]
edition = "2021"
description = "A crate for WTHOR Database"
readme = "README.md"
repository = "https://github.com/harenayo/wthor-rs"
license = "MIT"

[dependencies]
heapless = "0.8.0"
hyper = { version = "0.14.27", features = ["client", "tcp"], optional = true }
hyper-rustls = { version = "0.24.2", features = ["http2", "rustls-native-certs"], default-features = false, optional = true }
othello = { git = "https://github.com/harenayo/othello-rs", tag = "0.5.0" }

[dev-dependencies]
tokio = { version = "1.34.0", features = ["macros"] }

[features]
download = ["dep:hyper", "dep:hyper-rustls"]

[[test]]
name = "test"
required-features = ["download"]
